--- a/harmony_mobile_app/pubspec.yaml
+++ b/harmony_mobile_app/pubspec.yaml
@@ -21,7 +21,8 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
-  barcode_scan:
+  barcode_scan: 0.0.8
+  vibrate: 0.0.4
 
 dev_dependencies:
   flutter_test:
