--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -20,12 +20,16 @@ dependencies:
   flutter:
     sdk: flutter
   cloud_firestore: ^0.10.1
+  json_annotation: ^0.2.3
 # samples
   http:
+  flutter_stetho: ^0.2.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^0.9.0
+  json_serializable: ^0.5.0
 
 
 # For information on the generic Dart part of this file, see the
